// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<table
  className="filter-table gf-form-group"
>
  <tbody>
    <tr
      className="gf-form-disabled"
    >
      <td
        style={
          Object {
            "width": "1%",
          }
        }
      >
        <i
          className="gicon gicon-shield"
          style={
            Object {
              "height": "25px",
              "width": "25px",
            }
          }
        />
      </td>
      <td
        style={
          Object {
            "width": "90%",
          }
        }
      >
        Admin
        <span
          className="filter-table__weak-italic"
        >
           (Role)
        </span>
      </td>
      <td />
      <td
        className="query-keyword"
      >
        Can
      </td>
      <td>
        <div
          className="gf-form"
        >
          <DescriptionPicker
            className="gf-form-input--form-dropdown-right"
            disabled={true}
            onSelected={[Function]}
            optionsWithDesc={
              Array [
                Object {
                  "description": "Can query data source.",
                  "label": "Query",
                  "value": 1,
                },
                Object {
                  "description": "",
                  "label": "Admin",
                  "value": 2,
                },
              ]
            }
            value={2}
          />
        </div>
      </td>
      <td>
        <button
          className="btn btn-inverse btn-small"
        >
          <i
            className="fa fa-lock"
          />
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Render should render items 1`] = `
<table
  className="filter-table gf-form-group"
>
  <tbody>
    <tr
      className="gf-form-disabled"
    >
      <td
        style={
          Object {
            "width": "1%",
          }
        }
      >
        <i
          className="gicon gicon-shield"
          style={
            Object {
              "height": "25px",
              "width": "25px",
            }
          }
        />
      </td>
      <td
        style={
          Object {
            "width": "90%",
          }
        }
      >
        Admin
        <span
          className="filter-table__weak-italic"
        >
           (Role)
        </span>
      </td>
      <td />
      <td
        className="query-keyword"
      >
        Can
      </td>
      <td>
        <div
          className="gf-form"
        >
          <DescriptionPicker
            className="gf-form-input--form-dropdown-right"
            disabled={true}
            onSelected={[Function]}
            optionsWithDesc={
              Array [
                Object {
                  "description": "Can query data source.",
                  "label": "Query",
                  "value": 1,
                },
                Object {
                  "description": "",
                  "label": "Admin",
                  "value": 2,
                },
              ]
            }
            value={2}
          />
        </div>
      </td>
      <td>
        <button
          className="btn btn-inverse btn-small"
        >
          <i
            className="fa fa-lock"
          />
        </button>
      </td>
    </tr>
    <tr
      key="2-0"
    >
      <td
        style={
          Object {
            "width": "1%",
          }
        }
      >
        <img
          className="filter-table__avatar"
          src="/avatar/926aa85c6bcefa0b4deca3223f337ae1"
        />
      </td>
      <td
        style={
          Object {
            "width": "90%",
          }
        }
      >
        <span
          key="name"
        >
          testUser
           
        </span>
        <span
          className="filter-table__weak-italic"
          key="description"
        >
          (User)
        </span>
      </td>
      <td />
      <td
        className="query-keyword"
      >
        Can
      </td>
      <td>
        <div
          className="gf-form"
        >
          <DescriptionPicker
            className="gf-form-input--form-dropdown-right"
            disabled={true}
            onSelected={[Function]}
            optionsWithDesc={
              Array [
                Object {
                  "description": "Can query data source.",
                  "label": "Query",
                  "value": 1,
                },
                Object {
                  "description": "",
                  "label": "Admin",
                  "value": 2,
                },
              ]
            }
            value={1}
          />
        </div>
      </td>
      <td>
        <button
          className="btn btn-danger btn-small"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </button>
      </td>
    </tr>
    <tr
      key="6-1"
    >
      <td
        style={
          Object {
            "width": "1%",
          }
        }
      >
        <img
          className="filter-table__avatar"
          src="/avatar/93c0801b955cbd443a8cfa91a401d7bc"
        />
      </td>
      <td
        style={
          Object {
            "width": "90%",
          }
        }
      >
        <span
          key="name"
        >
          A-team
           
        </span>
        <span
          className="filter-table__weak-italic"
          key="description"
        >
          (Team)
        </span>
      </td>
      <td />
      <td
        className="query-keyword"
      >
        Can
      </td>
      <td>
        <div
          className="gf-form"
        >
          <DescriptionPicker
            className="gf-form-input--form-dropdown-right"
            disabled={true}
            onSelected={[Function]}
            optionsWithDesc={
              Array [
                Object {
                  "description": "Can query data source.",
                  "label": "Query",
                  "value": 1,
                },
                Object {
                  "description": "",
                  "label": "Admin",
                  "value": 2,
                },
              ]
            }
            value={1}
          />
        </div>
      </td>
      <td>
        <button
          className="btn btn-danger btn-small"
          onClick={[Function]}
        >
          <i
            className="fa fa-remove"
          />
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
